# ammtest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ammtest/: __init__.py  ammio.py  cli.py  client.py  config.py  decorator.py  exceptions.py  fixtures.py  reporter.py  runner.py  th.py
config/: config.json.tmp
examples/: test_TC_001_read_signal.py  test_TC_002_force_and_read.py  test_TC_003_force_float.py  test_TC_004_multiple_signals.py  utils.py
examples/test_TS_001/: test_TC_001.py
scripts/: run_examples.bat  run_examples.sh
