[project]
name = "ammtest"
version = "0.1.1"
description = "Python test framework for critical-software systems. Write, run, and trace system-level tests against any System Under Test (SUT)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pynng>=0.8.0",
    "pytest>=8.0,<9.0",
]

[project.optional-dependencies]
html = [
    "pytest-html>=4.0,<5.0",
]

[project.scripts]
ammtest = "ammtest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ammtest"]
